Working on making the search bar nice

--- a/modules/react/react_search_parser/tsconfig.json
+++ b/modules/react/react_search_parser/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
+    "jsx":              "react",
     "module":           "commonjs",
-    "target":           "ES2022",
+    "target":           "es6",
     "outDir":           "./dist",
     "moduleResolution": "node",
     "declaration":      true,
     "allowJs":          false,
     "skipLibCheck":     true,
-    "esModuleInterop":  true,
-    "sourceMap": true
+    "esModuleInterop":  true
   },
-  "include":         ["src/**/*.ts", "index.ts"],
+  "include":         ["src/**/*.ts", "src/**/*.tsx", "index.ts"],
   "exclude":         ["dist/**/*.ts", "node_modules"]
 }
