--- a/modules/react/react_search_parser/package.json
+++ b/modules/react/react_search_parser/package.json
@@ -2,8 +2,6 @@
   "name": "@enterprise_search/react_search_parser",
   "description": "parsers the search query in the context of the existing search query",
   "version": "0.0.1",
-  "main": "dist/index",
-  "types": "dist/index",
   "browserslist": {
     "development": [
       "last 1 chrome version",
@@ -18,16 +16,27 @@
   },
   "dependencies": {
     "@enterprise_search/debug": "0.0.1",
+    "@enterprise_search/react_keywords_filter": "0.0.1",
     "@enterprise_search/search_state": "0.0.1",
-    "debug": "^4.3.4"
+    "debug": "^4.3.4",
+    "@focuson/lens": "1.44.3",
+    "@focuson/state": "1.44.3",
+    "@laoban/utils": "1.4.45"
   },
   "devDependencies": {
-    "ts-jest": "^29.0.0",
-    "typescript": "^5.2.2",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^14.0.0",
-    "jest": "^29.0.0"
+    "ts-jest": "^29.2.5",
+    "@babel/preset-react": "^7.23.3",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "parcel": "^2.13.3",
+    "typescript": "^5.3.3",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/dom": "^10.1.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.5.2",
+    "recoil": "^0.7.7",
+    "@types/jest": "^27.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +55,7 @@
     ]
   },
   "files": [
+    "build/",
     "dist/index.js",
     "dist/index.d.ts",
     "dist/src/",
@@ -58,12 +68,21 @@
     "react": false
   },
   "keywords": [
-    "indexing"
+    "react",
+    "runbook"
   ],
   "license": "MIT",
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "repository": "git@github.com:intellimaintain/intellimaintain.git",
   "scripts": {
-    "test": "jest --config jest.config.json --env node",
-    "test:watch": "npm run test -- --watch"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "test": "jest --config jest.config.json",
+    "test:watch": "npm run test -- --watch",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   }
 }
