--- a/modules/react/react_utils/package.json
+++ b/modules/react/react_utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@enterprise_search/react_people_datasource_plugin",
-  "description": "The plugin that searches graph api for people",
+  "name": "@enterprise_search/react_utils",
+  "description": "Simple react utilities or type aliases",
   "version": "0.0.1",
   "browserslist": {
     "development": [
@@ -15,11 +15,6 @@
     ]
   },
   "dependencies": {
-    "@enterprise_search/search_state": "0.0.1",
-    "@enterprise_search/service_caller": "0.0.1",
-    "@enterprise_search/search_api": "0.0.1",
-    "@enterprise_search/react_datasource_plugin": "0.0.1",
-    "@enterprise_search/react_search_state": "0.0.1",
     "debug": "^4.3.4",
     "@focuson/lens": "1.44.3",
     "@focuson/state": "1.44.3",
