--- a/modules/react/components/search_important_components/package.json
+++ b/modules/react/components/search_important_components/package.json
@@ -20,6 +20,7 @@
     "@enterprise_search/react_time_filter_plugin": "0.0.1",
     "@enterprise_search/react_explain_filter_plugin": "0.0.1",
     "@enterprise_search/react_login_component": "0.0.1",
+    "@enterprise_search/search_important_components": "0.0.1",
     "debug": "^4.3.4",
     "@focuson/lens": "1.44.3",
     "@focuson/state": "1.44.3",
