Starting work on datasource filter

--- a/modules/examples/searchclient/package.json
+++ b/modules/examples/searchclient/package.json
@@ -18,9 +18,11 @@
     "@azure/msal-browser": "^3.28.0",
     "@enterprise_search/authentication": "0.0.1",
     "@enterprise_search/errors": "0.0.1",
+    "@enterprise_search/icons": "0.0.1",
     "@enterprise_search/msal_authentication": "0.0.1",
     "@enterprise_search/search_api": "0.0.1",
     "@enterprise_search/search_important_components": "0.0.1",
+    "@enterprise_search/sovereign": "0.0.1",
     "@enterprise_search/service_caller": "0.0.1",
     "@enterprise_search/search_state": "0.0.1",
     "debug": "^4.3.4",
