--- a/modules/react/filters_plugin/react_datasources_plugin/package.json
+++ b/modules/react/filters_plugin/react_datasources_plugin/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@enterprise_search/translation",
-  "description": "This is how we handle translations.",
+  "name": "@enterprise_search/react_data_sources_filter_plugin",
+  "description": "How we search for time",
   "version": "0.0.1",
   "browserslist": {
     "development": [
@@ -15,7 +15,12 @@
     ]
   },
   "dependencies": {
-    "@enterprise_search/recoil_utils": "0.0.1",
+    "@enterprise_search/icons": "0.0.1",
+    "@enterprise_search/translation": "0.0.1",
+    "@enterprise_search/react_filters_plugin": "0.0.1",
+    "@enterprise_search/search_state": "0.0.1",
+    "@enterprise_search/service_caller": "0.0.1",
+    "@enterprise_search/search_api": "0.0.1",
     "debug": "^4.3.4",
     "@focuson/lens": "1.44.3",
     "@focuson/state": "1.44.3",
