--- a/modules/react/sovereign/sovereign_search/package.json
+++ b/modules/react/sovereign/sovereign_search/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@enterprise_search/translation",
-  "description": "This is how we handle translations.",
+  "name": "@enterprise_search/sovereign_search",
+  "description": "A sovereign page that displays search",
   "version": "0.0.1",
   "browserslist": {
     "development": [
@@ -15,7 +15,9 @@
     ]
   },
   "dependencies": {
-    "@enterprise_search/recoil_utils": "0.0.1",
+    "@enterprise_search/search_state": "0.0.1",
+    "@enterprise_search/react_utils": "0.0.1",
+    "@enterprise_search/react_datasource_plugin": "0.0.1",
     "debug": "^4.3.4",
     "@focuson/lens": "1.44.3",
     "@focuson/state": "1.44.3",
