--- a/modules/react/data_views/data_view/package.json
+++ b/modules/react/data_views/data_view/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@enterprise_search/authentication": "0.0.1",
+    "@enterprise_search/react_data_views_filter_plugin": "0.0.1",
     "@enterprise_search/react_search_state": "0.0.1",
     "@enterprise_search/search_api": "0.0.1",
     "@enterprise_search/service_caller": "0.0.1",
