--- a/modules/react/search_gui_state/search_gui_state/package.json
+++ b/modules/react/search_gui_state/search_gui_state/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@enterprise_search/recoil_utils": "0.0.1",
+    "@enterprise_search/react_datasource_plugin": "0.0.1",
     "debug": "^4.3.4",
     "@focuson/lens": "1.44.3",
     "@focuson/state": "1.44.3",
