Now creating filters from url at startup

--- a/modules/react/filters_plugin/react_filters_plugin/package.json
+++ b/modules/react/filters_plugin/react_filters_plugin/package.json
@@ -18,6 +18,7 @@
     "@enterprise_search/search_state": "0.0.1",
     "@enterprise_search/service_caller": "0.0.1",
     "@enterprise_search/search_api": "0.0.1",
+    "@enterprise_search/url_codec": "0.0.1",
     "debug": "^4.3.4",
     "@focuson/lens": "1.44.3",
     "@focuson/state": "1.44.3",
