--- a/modules/react/sovereign/sovereign_search/package.json
+++ b/modules/react/sovereign/sovereign_search/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@enterprise_search/sovereign": "0.0.1",
+    "@enterprise_search/translation": "0.0.1",
     "@enterprise_search/search_bar": "0.0.1",
+    "@enterprise_search/search_dropdown": "0.0.1",
     "@enterprise_search/react_filters_plugin": "0.0.1",
     "@enterprise_search/react_datasource_plugin": "0.0.1",
     "@enterprise_search/search_state": "0.0.1",
