--- a/modules/react/sovereign/sovereign/package.json
+++ b/modules/react/sovereign/sovereign/package.json
@@ -21,6 +21,7 @@
     "@enterprise_search/optics": "0.0.1",
     "@enterprise_search/react_utils": "0.0.1",
     "@enterprise_search/routing": "0.0.1",
+    "@enterprise_search/translation": "0.0.1",
     "debug": "^4.3.4",
     "@focuson/lens": "1.44.3",
     "@focuson/state": "1.44.3",
