--- a/modules/react/components/edit/package.json
+++ b/modules/react/components/edit/package.json
@@ -85,8 +85,8 @@
   "peerDependencies": {},
   "repository": "git@github.com:intellimaintain/intellimaintain.git",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "start": "node_modules/.bin/parcel src/index.html",
+    "build": "node_modules/.bin/parcel build src/index.html",
     "test": "jest --config jest.config.json",
     "test:watch": "npm run test -- --watch",
     "storybook": "storybook dev -p 6006",
