--- a/modules/react/data_plugin/confluence_data_plugin/package.json
+++ b/modules/react/data_plugin/confluence_data_plugin/package.json
@@ -18,6 +18,7 @@
     "@enterprise_search/search_state": "0.0.1",
     "@enterprise_search/react_data": "0.0.1",
     "@enterprise_search/renderers": "0.0.1",
+    "@enterprise_search/all_renderers": "0.0.1",
     "debug": "^4.3.4",
     "@focuson/lens": "1.44.3",
     "@focuson/state": "1.44.3",
