--- a/modules/examples/searchclient/package.json
+++ b/modules/examples/searchclient/package.json
@@ -32,6 +32,7 @@
     "@enterprise_search/service_caller": "0.0.1",
     "@enterprise_search/search_state": "0.0.1",
     "@enterprise_search/react_utils": "0.0.1",
+    "@enterprise_search/simple_translation": "0.0.1",
     "debug": "^4.3.4",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
