--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "nyc": "^17.1.0"
+  },
   "scripts": {
     "example": "cd modules/examples/searchclient && parcel src/index.html --port 8080"
   }
