--- a/modules/examples/searchclient/package.json
+++ b/modules/examples/searchclient/package.json
@@ -26,40 +26,26 @@
     "@enterprise_search/renderers": "0.0.1",
     "@enterprise_search/html_renderers": "0.0.1",
     "@enterprise_search/markdown_renderers": "0.0.1",
+    "@enterprise_search/sovereign_mui": "0.0.1",
     "@enterprise_search/search_important_components": "0.0.1",
+    "@enterprise_search/selectable_button": "0.0.1",
     "@enterprise_search/sovereign": "0.0.1",
     "@enterprise_search/sovereign_search": "0.0.1",
     "@enterprise_search/service_caller": "0.0.1",
     "@enterprise_search/search_state": "0.0.1",
     "@enterprise_search/react_utils": "0.0.1",
-    "@enterprise_search/simple_translation": "0.0.1",
-    "debug": "^4.3.4",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@focuson/lens": "1.44.3",
-    "@focuson/state": "1.44.3",
-    "@laoban/utils": "1.4.45",
-    "@mui/material": "^5.15.10",
-    "@mui/icons-material": "^5.15.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@enterprise_search/simple_translation": "0.0.1"
   },
   "devDependencies": {
     "ts-jest": "^29.2.5",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "parcel": "^2.13.3",
-    "@parcel/transformer-webmanifest": "^2.13.3",
     "typescript": "^5.3.3",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/dom": "^10.1.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/user-event": "^14.5.2",
-    "recoil": "^0.7.7",
-    "@types/jest": "^27.0.1"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^15.0.6",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "jest-localstorage-mock": "^2.4.26"
   },
   "eslintConfig": {
     "extends": [
@@ -89,7 +75,10 @@
     "runbook"
   ],
   "license": "MIT",
-  "peerDependencies": {},
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "repository": "git@github.com:intellimaintain/intellimaintain.git",
   "scripts": {
     "8080": "parcel src/index.html --port 8080",
