--- a/modules/search_state/search_state/package.json
+++ b/modules/search_state/search_state/package.json
@@ -20,12 +20,9 @@
     "debug": "^4.3.4"
   },
   "devDependencies": {
-    "ts-jest": "^29.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.2.2",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^14.0.0",
-    "jest": "^29.0.0"
+    "@types/jest": "^27.5.2"
   },
   "eslintConfig": {
     "extends": [
