--- a/modules/service_caller/axios_service_caller/package.json
+++ b/modules/service_caller/axios_service_caller/package.json
@@ -26,12 +26,9 @@
   },
   "devDependencies": {
     "axios-mock-adapter": "^2.1.0",
-    "ts-jest": "^29.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.2.2",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^14.0.0",
-    "jest": "^29.0.0"
+    "@types/jest": "^27.5.2"
   },
   "eslintConfig": {
     "extends": [
