--- a/templates/react/package.json
+++ b/templates/react/package.json
@@ -16,35 +16,19 @@
       "not op_mini all"
     ]
   },
-  "dependencies": {
-    "debug": "^4.3.4",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@focuson/lens": "1.44.3",
-    "@focuson/state": "1.44.3",
-    "@laoban/utils": "1.4.45",
-    "@mui/material": "^5.15.10",
-    "@mui/icons-material": "^5.15.10",
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "peerDependencies": {
-  },
   "devDependencies": {
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "parcel": "^2.13.3",
-    "@parcel/transformer-webmanifest":"^2.13.3",
     "typescript": "^5.3.3",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/dom": "^10.1.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/user-event": "^14.5.2",
-    "recoil": "^0.7.7",
-    "@types/jest": "^27.0.1"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^15.0.6",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "jest-localstorage-mock": "^2.4.26"
   },
   "eslintConfig": {
     "extends": [
